# iowarp-core

./: .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  COVERAGE_IMPROVEMENTS_REPORT.md  HEADER_UPDATE_GUIDE.md  QUICK_HEADER_GUIDE.md  codecov.yml  install.sh  pyproject.toml  setup.py  test_minimal_ring  test_minimal_ring.cc  test_mp_debug.cc
.devcontainer/: Dockerfile  devcontainer.json  post-start.sh
.devcontainer/cpu/: Dockerfile  devcontainer.json
.devcontainer/nvidia-gpu/: Dockerfile
.github/workflows/: build-and-test.yml  build-containers.yaml  build-dist.yml  build-pip.yml  gpu-tests.yml
CI/: calculate_coverage.sh
cmake/: IowarpCoreCommon.cmake
context-assimilation-engine/: CMakeLists.txt
context-assimilation-engine/core/src/: core_runtime.cc
context-assimilation-engine/test/unit/: test_cae_comprehensive.cc
context-exploration-engine/api/: CMakeLists.txt  README.md
context-exploration-engine/api/src/: context_interface.cc  python_bindings.cc
context-exploration-engine/api/test/: CMakeLists.txt  test_context_bundle.cc  test_context_comprehensive.cc  test_context_destroy.cc  test_context_interface.py  test_context_query.cc
context-exploration-engine/docs/: python_api.md
context-exploration-engine/iowarp-cei-mcp/: server.py
context-runtime/: CMakeLists.txt
context-runtime/benchmark/: CMakeLists.txt  wrp_run_thrpt_benchmark.cc
context-runtime/benchmark/bench_gpu_runtime/: CMakeLists.txt  bench_gpu_runtime.cc  bench_gpu_runtime_gpu.cc
context-runtime/docs/: module_dev_guide.md  reliability.md
context-runtime/docs/MOD_NAME/: MOD_NAME.md
context-runtime/docs/admin/: admin.md
context-runtime/docs/bdev/: bdev.md
context-runtime/include/chimaera/: chimaera.h  config_manager.h  container.h  future.h  gpu_container.h  gpu_work_orchestrator.h  gpu_worker.h  ipc_manager.h  local_task_archives.h  pool_query.h  task.h  task_archives.h  types.h  work_orchestrator.h  worker.h
context-runtime/modules/: CMakeLists.txt
context-runtime/modules/admin/: chimaera_mod.yaml
context-runtime/src/: CMakeLists.txt  chimaera.cc  chimaera_manager.cc  config_manager.cc  ipc_manager.cc  local_transfer.cc  module_manager.cc  pool_manager.cc  task.cc  task_archive.cc  work_orchestrator.cc  work_orchestrator_gpu.cc  worker.cc
context-runtime/src/autogen/: gpu_work_orchestrator_modules.h
context-runtime/src/gpu/: work_orchestrator_gpu.cc
context-runtime/src/ipc/: ipc_cpu2cpu_zmq.cc  ipc_cpu2self.cc  ipc_gpu2cpu.cc
context-runtime/src/scheduler/: default_sched.cc
context-runtime/test/integration/: CMakeLists.txt
context-runtime/test/unit/: CMakeLists.txt  test_autogen_coverage.cc  test_bdev_chimod.cc  test_buddy_benchmark_gpu.cc  test_client_retry.cc  test_compose.cc  test_external_client.cc  test_gpu_runtime.cc  test_ipc_allocate_buffer_gpu.cc  test_ipc_errors.cc  test_ipc_transport_modes.cc  test_mpi_bdev_transport.cc  test_per_process_shm.cc  test_save_load_task.cc  test_task_archive.cc
context-runtime/util/: chi_refresh_repo.cc  chimaera_cmd_monitor.cc  chimaera_cmd_refresh_repo.cc  chimaera_compose.cc  chimaera_monitor.cc  chimaera_start_runtime.cc
context-transfer-engine/: CMakeLists.txt
context-transfer-engine/adapter/: CMakeLists.txt
context-transfer-engine/adapter/adios2/: iowarp_engine.cc  iowarp_engine.h
context-transfer-engine/benchmark/: CMakeLists.txt  cte_config_ram.yaml  wrp_cte_gpu_bench.cc  wrp_cte_gpu_bench_gpu.cc  wrp_cte_score_bench.cc
context-transfer-engine/benchmark/gpu/: CMakeLists.txt  bench_common.h  llm_kvcache.cu  workload.h  workload_bdev.cc  workload_cte_client_overhead.cc  workload_gnn.cc  workload_gray_scott.cc  workload_llm_kvcache.cc  workload_pagerank.cc  workload_synthetic.cc
context-transfer-engine/benchmark/gpu_baseline/: CMakeLists.txt  README.md  bench_bus_contention.cu  bench_cross_node_hbm.cu  bench_cross_node_pinned_host.cu  bench_pinned_host.cu  bench_remote_hbm.cu  kernels_cross_node_hbm.cuh  kernels_cross_node_pinned_host.cuh  kernels_pinned_host.cuh  kernels_remote_hbm.cuh  utils.h
context-transfer-engine/compressor/generator/: generate_training_dataset.cc  gray_scott_analysis.cc  synthetic_data_generator.h
context-transfer-engine/compressor/src/: compressor_runtime.cc
context-transfer-engine/core/: CMakeLists.txt
context-transfer-engine/docs/: cte.md
context-transport-primitives/: CMakeLists.txt
context-transport-primitives/ai-prompts/: phase4-allocator.md  phase5-tls.md
context-transport-primitives/src/: CMakeLists.txt  posix_socket.cc
context-transport-primitives/test/unit/allocator/: CMakeLists.txt  allocator_test.h  test_alloc.cc  test_arena_alloc.cc  test_buddy_allocator.cc  test_buddy_allocator_singlethread.cc  test_mp_allocator.cc  test_mp_allocator_multiprocess.cc  test_sub_alloc.cc  test_thread_allocator.cc
context-transport-primitives/test/unit/allocators/: CMakeLists.txt  test_buddy_allocator.cc
context-transport-primitives/test/unit/compress/: CMakeLists.txt  test_compress_benchmark.cc  test_compression_benchmark.cc  test_compression_contention.cc  test_qtable_predictor.cc
context-transport-primitives/test/unit/compress/results/paper/: compression_contention_results.csv
context-transport-primitives/test/unit/data_structures/: CMakeLists.txt  test_ring_queue_pre.cc  test_slist_pre.cc
context-transport-primitives/test/unit/data_structures/ipc/: CMakeLists.txt  test_ring_buffer_mpsc.cc
context-transport-primitives/test/unit/data_structures/priv/: CMakeLists.txt
context-transport-primitives/test/unit/data_structures/serialization/: CMakeLists.txt
docker/: README.minimal.md  deploy-cpu.Dockerfile  deploy.Dockerfile  deps-cpu.Dockerfile  deps-nvidia.Dockerfile  local.sh  minimal.Dockerfile
docker/hindsight/: docker-compose.yml
installers/conda/: build.sh
installers/conda-cuda/: build.sh  meta.yaml  recipe.yaml
installers/pip/: build_deps_manylinux.sh
jarvis_iowarp/pipelines/: cte_gpu_bench.yaml  gray_scott_test.yaml
runtime/: CMakeLists.txt
test/fuse-manual/: copy_workspace.sh  start.sh
(+165 files in other folders)
